# rustex

./: .gitignore  Cargo.toml  README.md  rustex.toml
crates/rustex-cli/: Cargo.toml
crates/rustex-cli/src/: main.rs
crates/rustex-cli/tests/: generate.rs
crates/rustex-cli/tests/golden/: api.rs  models.rs
crates/rustex-convex/: Cargo.toml
crates/rustex-convex/src/: lib.rs
crates/rustex-diagnostics/: Cargo.toml
crates/rustex-diagnostics/src/: lib.rs
crates/rustex-ir/: Cargo.toml
crates/rustex-ir/src/: lib.rs
crates/rustex-output/: Cargo.toml
crates/rustex-output/src/: lib.rs
crates/rustex-project/: Cargo.toml
crates/rustex-project/src/: lib.rs
crates/rustex-runtime/: Cargo.toml
crates/rustex-runtime/src/: lib.rs
crates/rustex-rustgen/: Cargo.toml
crates/rustex-rustgen/src/: lib.rs
crates/rustex-swiftgen/: Cargo.toml
crates/rustex-swiftgen/src/: api.rs  lib.rs  naming.rs  package.rs  runtime.rs  types.rs
crates/rustex-testkit/: Cargo.toml
crates/rustex-testkit/src/: lib.rs
crates/rustex-ts-analyzer/: Cargo.toml  build.rs
crates/rustex-ts-analyzer/src/: lib.rs
docs/: architecture.md
example/: .gitignore  Cargo.toml  README.md  package.json  rustex.toml
example/convex/: messages.ts
example/convex/_rustex/: rustex.diagnostics.json  rustex.ir.json
example/convex/_rustex/rust/: Cargo.toml  api.rs  ids.rs  lib.rs  models.rs
example/convex/_rustex/swift/: Package.swift  README.md
example/convex/_rustex/swift/Sources/RustexGenerated/: RustexAPI.swift  RustexIds.swift  RustexModels.swift
example/convex/_rustex/swift/Sources/RustexRuntime/: RustexClient.swift  RustexEncoding.swift  RustexErrors.swift  RustexLogging.swift  RustexSpecs.swift  RustexSupportTypes.swift
example/convex/_rustex_out/: rustex.diagnostics.json  rustex.ir.json
example/convex/_rustex_out/rust/: Cargo.toml  api.rs
example/rust/: Cargo.toml
example/rust-cli/: Cargo.toml
example/rust-cli/src/: main.rs
example/rust/src/: main.rs
example/src/: main.rs
example/swift/: Package.resolved  Package.swift  RustexGenerated
example/swift/Sources/RustexSwiftExample/: main.swift
fixtures/basic-schema/convex/: messages.ts  schema.ts
fixtures/basic-schema/convex/_generated/: api.d.ts  dataModel.d.ts  server.d.ts
