[workspace]
members = [
  "crates/rustex-cli",
  "crates/rustex-project",
  "crates/rustex-ts-analyzer",
  "crates/rustex-convex",
  "crates/rustex-ir",
  "crates/rustex-diagnostics",
  "crates/rustex-runtime",
  "crates/rustex-rustgen",
  "crates/rustex-output",
  "crates/rustex-testkit",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Rustex Contributors"]

[workspace.dependencies]
anyhow = "1.0.100"
camino = { version = "1.2.1", features = ["serde1"] }
clap = { version = "4.5.40", features = ["derive"] }
convex = "0.10.4"
ignore = "0.4.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
toml = "0.9.7"
walkdir = "2.5.0"
log = "0.4"
env_logger = "0.11.8"
