[package]
name = "rustex-convex"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Convex-specific IR finalization for Rustex."

[dependencies]
rustex-ir = { path = "../rustex-ir", version = "0.1.0" }
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
