[package]
name = "rustex-project"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Project configuration and layout resolution for Rustex."

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
