[package]
name = "rustex-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Runtime traits and typed Convex client wrapper for Rustex-generated code."

[dependencies]
anyhow.workspace = true
convex.workspace = true
futures-core = "0.3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
