[package]
name = "rustex-ts-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
rustex-ir = { path = "../rustex-ir" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
walkdir.workspace = true
log.workspace = true
