[package]
name = "rustex-ts-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bundled TypeScript analyzer bridge for Rustex."
include = [
  "Cargo.toml",
  "build.rs",
  "src/**",
  "vendor/analyze.cjs",
]

[dependencies]
anyhow.workspace = true
camino.workspace = true
rustex-ir = { path = "../rustex-ir", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
walkdir.workspace = true
tracing.workspace = true

[build-dependencies]
sha2.workspace = true
